<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Targetor!</string>
    <string name="singleplayer">Single player</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="share_subject">Targetor! - a cool android game</string>
    <string name="share_text">Hey I\'m playing Targetor! game for Android. It supports Bluetooth multiplayer, so you can shoot targets with your friends! go check it out at https://play.google.com/store/apps/details?id=cz.packito.targetor</string>
    <string name="share_chooser">Spread the word about Targetor!</string>
    <string name="are_you_sure">Are you sure? There are many targets left!</string>
    <string name="paired_devices">Paired devices\nClick to connect:</string>
    <string name="make_discoverable">Make discoverable</string>
    <string name="device_discoverable">Device is discoverable…</string>
    <string name="search_devices">Search for devices</string>
    <string name="bluetooth_not_supported">Your device doesn\'t support Bluetooth!</string>
    <string name="cant_play_no_bt">Can\'t play multiplayer with Bluetooth disabled!</string>
    <string name="searching">Searching… make sure the other device is discoverable!</string>
    <string name="connected_to">Connected to</string>
    <string name="connecting_to">Connecting to</string>
    <string name="cant_connect">Can\'t connect</string>
    <string name="opponent_left">Your opponent has left</string>
    <string name="connection_lost">Connection lost</string>
    <string name="touch_to_start">Touch to start game</string>
    <string name="touch_to_resume">Touch to resume</string>
    <string name="bt_help_title">Bluetooth help</string>
    <string name="bt_help_message">To start a game, click on the device you want to play with.\n\nIf the devices have already been paired, you should see the other one in the left list.\n\nIf the devices are not paired yet, you have to make one of the devices discoverable, and start searching with the other one. After finding, the new device will appear in the list on the right. After clicking it, the devices will automtically be paired and the game starts. </string>
    <string name="time_up">Time\'s up!</string>
    <string name="your_score">"Your score: "</string>
    <string name="win">You won!</string>
    <string name="lose">You lose!</string>
    <string name="music_author_name">Aj Novobilski</string>
    <string name="music_by">Music by:</string>
    <string name="developer_name">packito</string>
    <string name="programming_by">Programming by:</string>
    <string name="other_sounds">Other sounds from freesound.org</string>
    <string name="email_chooser">Send Email to Developer</string>
    <string name="opponent_not_ready">Your opponent is not ready to play!</string>
    <string name="no_email_client">No e-mail client installed.\nEmail address was copied to clipboard.</string>
    <string name="tie">It\'s a tie!</string>
    <string name="me">Me</string>
    <string name="score">Score</string>
    <string name="accuracy">Accuracy</string>
    <string name="total">Total wins</string>
    <string name="level_continue">"Continue - level "</string>
    <string name="title_success">Success! - Level </string>
    <string name="title_failure">Failure! - Level </string>
    <string name="target_score">Target score</string>
    <string name="high_score">High score </string>
    <string name="new_highscore">New High Score!</string>
</resources>
