<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/programming_by"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developer_name"
            android:textSize="48sp" />

        <ImageButton
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:onClick="sendEmail"
            android:scaleType="fitXY"
            android:src="@drawable/ic_gmail" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music_by"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music_author_name"
            android:textSize="48sp" />

        <ImageButton
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:scaleType="fitXY"
            android:onClick="openSoundCloud"
            android:src="@drawable/ic_soundcloud" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="36dp" >
    </FrameLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_sounds"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>